# planificateur

./: .gitignore  .replit  build.sh  drizzle.config.ts  init-db.ts  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt  run_django.py  start.sh
attached_assets/: Pasted--Liste-des-pages-et-leur-contenu-R-sum-1-Page-d-accueil-Pr-sentation-de-la-plateforme-Exp-1741684237581.txt  Pasted-Traceback-most-recent-call-last-File-home-runner-workspace-pythonlibs-lib-python3-11-site-pa-1741691011118.txt  Pasted-from-ortools-sat-python-import-cp-model-Donn-es-d-entr-e-exemple-examens-id-1--1741683435640.txt
backend/: bridge_api.py  manage.py
backend/apps/exam_scheduler/: admin.py  fixtures.py  models.py  optimizer.py  serializers.py  urls.py  views.py
backend/apps/exam_scheduler/migrations/: 0001_initial.py
backend/core/: asgi.py  urls.py  wsgi.py
backend/settings/: __init__.py  base.py
client/: index.html
client/src/: App.tsx  index.css  main.tsx
client/src/components/analytics/: AnalyticsSummary.tsx
client/src/components/dashboard/: ExamCalendarDay.tsx  ExamCalendarItem.tsx  FilterControls.tsx  RoomCard.tsx  (+1 more)
client/src/hooks/: useGsapTransition.ts
client/src/lib/: animations.ts
client/src/pages/: AddExam.tsx  ConflictResolution.tsx  Dashboard.tsx  ExamManagement.tsx  ExportPlan.tsx  Home.tsx  ProctorManagement.tsx  RoomManagement.tsx  Scheduler.tsx
client/src/utils/: timeSlots.ts
planificateur/: main.py  model.py  optimizer_local.py  scheduler.py  test_data.py
server/: index.ts  routes.ts  storage.ts
shared/: schema.ts
(+5 files in other folders)
